refactor: extract endpoints handler
