# api/openapispec/swagger.json
@@ -1060,6 +1060,29 @@
                     }
                 }
             }
+        },
+        "/endpoints": {
+            "get": {
+                "description": "List all registered endpoints in the router",
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "endpoints"
+                ],
+                "summary": "List all available endpoints",
+                "responses": {
+                    "200": {
+                        "description": "Endpoints listed successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
